--- a/lesson9.css
+++ b/lesson9.css
@@ -24,13 +24,18 @@ main{
 	position:relative;
 	border:1px solid #eee;
 }
+
+	
+		
+
+
 .step-box:last-child{
 	margin-right:0;
 }
 
 .step-img1{
 	height:150px;
-	background-image: url(img9/flow01.png);
+	background-image:url(img9/flow01.png);
 	background-size:cover;
 	background-position:bottom;
 
@@ -64,3 +69,33 @@ main{
 .title{
 	margin:15px 0 5px;
 }
+
+
+
+@media screen and (max-width:768px){
+	.step-box{
+		float:none;
+		width:90%;
+		margin-top:20px ;
+	}
+	.main{
+		margin:50px auto;
+
+	}
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
