--- a/lesson9.css
+++ b/lesson9.css
@@ -1,3 +1,4 @@
+
 *{
 	margin:0;
 	padding:0;
@@ -25,13 +26,13 @@ main{
 	border:1px solid #eee;
 }
 
-	
-		
 
 
 .step-box:last-child{
 	margin-right:0;
 }
+
+
 
 .step-img1{
 	height:150px;
@@ -75,13 +76,21 @@ main{
 @media screen and (max-width:768px){
 	.step-box{
 		float:none;
-		width:90%;
-		margin-top:20px ;
-	}
-	.main{
-		margin:50px auto;
+		margin:20px auto;
+		padding:50px 0;
 
 	}
+
+	.main{
+		margin:90%;
+	}
+
+	.step-box:last-child{
+		margin:auto;
+	}
+
+
+
 
 
 
